gitops/security/networkpolicy-default-deny-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: snake-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
