gitops/security/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: snake-prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
